bml/test/syntax-errors/onlyopen.correct
[Error: <b>BML block 'TAG' has no close</b>]